--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,198 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+* {
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+.container {
+  padding: 48px 0;
+}
+
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.link__hover-effect {
+  position: relative;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  right:0;
+  height: 3px;
+  width: 0;
+  background-color: black;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect:hover:after {
+  left: 0;
+  width: 100%;
+}
+
+.link__hover-effect--white:after {
+  background-color: white;
+}
+
+/* 
+
+NAV
+
+*/
+
+nav {
+  background-color: #0d253f;
+}
+
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+  padding: 24px 16px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  
+}
+
+.nav__img {
+  height: 40px;
+}
+
+
+.nav__links {
+  display: flex;
+}
+
+.nav__link {
+  margin-right: 36px;
+}
+
+.nav__link:last-child {
+  margin-right: 0px;
+}
+
+.nav__link--anchor {
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.btn-contact {
+  padding: 12px 24px;
+  background-color: #01b4e4;
+  border-radius: 9999px;
+  transition: all 300ms ease;
+}
+
+.btn-contact:hover {
+  background-color: #01b3e4bb;
+}
+
+
+
+
+/* 
+
+Search
+
+*/
+
+header {
+  position: relative;
+}
+
+.header__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 0px;
+}
+
+.header__img--wrapper {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  position: absolute;
+  z-index: -1;
+}
+
+.header__img {
+  width: 100%;
+}
+
+
+.title {
+  font-size: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header__para {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-bar {
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.search-bar input {
+  padding: 16px 16px 16px 32px;
+  border-radius: 9999px;
+  width: 100%;
+  font-weight: 500;
+  transition-duration: 300ms;
+  font-size: 16px;
+  border: 2px solid #e5e7eb;
+  outline: none;
+  transition: all 300ms ease;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar input:focus {
+  border: 2px solid #01b4e4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+
+Footer
+
+*/
+
+footer {
+  background-color: gray;
 }
