--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 /* 
-  TODO: add search button
-  TODO: add popular button
-  TODO: add actual search results button
-  TODO: loading state
+  TODO: loading state of images
   TODO: clicking image goes to new page
-
+  TODO: condition no search result found
+  TODO: if image doesnt exist make an image doesnt exist box
 */
 
 :root {
@@ -158,8 +156,21 @@ header
   margin-bottom: 60px;
 }
 
-.search-bar {
+.search-bar--wrapper {
   width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar__btn {
+  font-size: 1.2em;
+  padding-left: 8px;
+  cursor: pointer;
+}
+
+.search-bar {
+  width: 100%;
   padding: 16px 16px 16px 32px;
   border-radius: 9999px;
   font-weight: 500;
@@ -169,8 +180,29 @@ header
   transition: all 300ms ease;
 }
 
-.search-bar input:focus {
+.search-bar:focus {
   border: 2px solid #01b4e4;
+}
+
+.header__search-options {
+  display: flex;
+  flex-direction: row;
+  gap: 45px;
+  margin-top: 32px;
+}
+
+.search-option__link {
+  padding: 16px 8px;
+  color: white;
+  font-weight: 500;
+  background-color: var(--tmdb-light-blue);
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 300ms;
+}
+
+.search-option__link:hover {
+  background-color: #01b3e4bb;
 }
 
 /* 
@@ -199,6 +231,7 @@ Movie search results
 .movie {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 8px;
   margin: 16px;
   width: 30%;
@@ -214,7 +247,8 @@ Movie search results
 
 .movie__img--wrapper {
   width: 90%;
-  margin: 0 auto;
+  margin: auto 0;
+  /* margin: 0 auto; */
 }
 
 .movie__img {
@@ -230,6 +264,42 @@ Movie search results
 }
 
 
+.skeleton__img {
+  background-color: lightgray;
+  width: 100%;
+  height: 169px;
+}
+
+.skeleton__title {
+  margin-top: 4px;
+  background-color: lightgray;
+  width: 190px;
+  height: 19px;
+}
+
+.skeleton__rating {
+  margin-top: 4px;
+  background-color: lightgray;
+  width: 100px;
+  height: 19px;
+}
+
+.no-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -242,5 +312,14 @@ Footer
 */
 
 footer {
-  background-color: gray;
+  padding: 27px 32px;
+  background-color: var(--tmdb-blue);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__copyright {
+  color: var(--tmdb-light-blue);
+  font-size: 20px;
 }
