--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 /* 
-  TODO: loading state of images
   TODO: clicking image goes to new page
-  TODO: condition no search result found
-  TODO: if image doesnt exist make an image doesnt exist box
+  TODO: make everything responsive
 */
 
 :root {
@@ -25,6 +23,10 @@ a {
 
 li {
   list-style-type: none;
+}
+
+.no-cursor {
+  cursor: not-allowed;
 }
 
 .container {
@@ -84,6 +86,10 @@ nav {
   max-width: 1200px;
   margin: 0 auto;
   
+}
+
+.nav__img--wrapper {
+  cursor: pointer;
 }
 
 .nav__img {
@@ -161,12 +167,14 @@ header
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .search-bar__btn {
   font-size: 1.2em;
-  padding-left: 8px;
   cursor: pointer;
+  position: absolute;
+  right: 20px;
 }
 
 .search-bar {
