--- a/src/App.css
+++ b/src/App.css
@@ -143,15 +143,8 @@ header
   align-items: center;
 }
 
-.header__img {
-  width: 100%;
-  object-fit: cover;
-  height: 500px;
-}
-
 .header__title {
   font-size: 50px;
-  margin-bottom: 16px;
   text-align: center;
   padding: 0 8px;
   max-width: 900px;
@@ -225,7 +218,7 @@ Movie search results
   justify-content: space-between;
   margin-left: 32px;
   margin-right: 32px;
-  padding-bottom: 80px;
+  padding: 20px 0;
 }
 
 #movie-selector {
