--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ nav {
 }
 
 .nav__link--anchor {
-  color: white;
+  color: black;
   font-size: 16px;
   font-weight: 700;
 }
@@ -193,7 +193,7 @@ header
 .search-option__link {
   padding: 16px 8px;
   margin: 10px;
-  color: white;
+  color: black;
   font-weight: 500;
   background-color: var(--tmdb-light-blue);
   border-radius: 8px;
